--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,6 @@
     <color name="colorSettings">#fb6753</color>
     <color name="colorProfile">#fc8b53</color>
     <color name="colorBot">#fdd55a</color>
+    <color name="colorBlack">#000000</color>
+
 </resources>
