--- a/app/src/main/res/layout/fragment_bot.xml
+++ b/app/src/main/res/layout/fragment_bot.xml
@@ -3,10 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:TagsEditText="http://schemas.android.com/apk/res-auto"
     android:background="@android:color/white"
     tools:context="com.haayhappen.instafarm.BotFragment">
-
-    <!-- TODO: Update blank fragment layout -->
 
     <TextView
         android:id="@+id/textView4"
@@ -165,6 +164,24 @@
         </LinearLayout>
 
     </LinearLayout>
+
+
+    <mabbas007.tagsedittext.TagsEditText
+        android:id="@+id/tagsEditText"
+        TagsEditText:allowSpaceInTag="true"
+        TagsEditText:tagsBackground="@drawable/square"
+        TagsEditText:tagsCloseImageLeft="@drawable/dot"
+        TagsEditText:tagsCloseImagePadding="@dimen/defaultTagsCloseImagePadding"
+        TagsEditText:tagsCloseImageRight="@drawable/tag_close"
+        TagsEditText:tagsTextColor="@color/blackOlive"
+        TagsEditText:tagsTextSize="@dimen/defaultTagsTextSize"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
+        android:layout_marginLeft="16dp"
+        app:layout_constraintLeft_toLeftOf="parent" />
+
 
     <LinearLayout
         android:id="@+id/linearLayout2"
