--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,11 +10,12 @@
     <color name="colorWhite">#FFFFFF</color>
     <color name="grey_100">#F5F5F5</color>
     <color name="grey_300">#E0E0E0</color>
+    <color name="blackOlive">#005c99</color>
 
-<!-- FOR alternative colors scheme
-    <color name="colorPrimary">#039BE5</color>
-    <color name="colorPrimaryDark">#0288D1</color>
-    <color name="colorAccent">#FFA000</color>
--->
+    <!-- FOR alternative colors scheme
+        <color name="colorPrimary">#039BE5</color>
+        <color name="colorPrimaryDark">#0288D1</color>
+        <color name="colorAccent">#FFA000</color>
+    -->
 
 </resources>
