--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -86,7 +86,7 @@
                     android:layout_marginLeft="21dp"
                     android:ems="10"
                     android:inputType="textPersonName"
-                    android:text="hackingismylifeanonymous"
+                    android:text="svenspieler"
                     app:layout_constraintLeft_toRightOf="@+id/textView"
                     tools:layout_editor_absoluteY="411dp" />
 
@@ -98,7 +98,7 @@
                     android:layout_marginTop="4dp"
                     android:ems="10"
                     android:inputType="textPassword"
-                    android:text="passwort"
+                    android:text="5Keosniluro"
                     app:layout_constraintLeft_toRightOf="@+id/textView"
                     app:layout_constraintTop_toBottomOf="@+id/usernameEditText" />
             </LinearLayout>
