--- a/app/src/main/res/layout/fragment_bot.xml
+++ b/app/src/main/res/layout/fragment_bot.xml
@@ -162,6 +162,7 @@
                 android:text="Unfollow per day"
                 android:textAlignment="viewStart"
                 android:textSize="20sp" />
+
         </LinearLayout>
 
     </LinearLayout>
@@ -182,21 +183,46 @@
         <!--app:layout_constraintTop_toBottomOf="@+id/linearLayout"-->
         <!--android:layout_marginLeft="16dp"-->
         <!--app:layout_constraintLeft_toLeftOf="parent" />-->
-    <co.lujun.androidtagview.TagContainerLayout
-        android:id="@+id/tagcontainerLayout"
+
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="0dp"
-        android:padding="10dp"
-        app:container_enable_drag="true"
-        app:horizontal_interval="10dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="8dp"
+        android:orientation="horizontal"
+        android:weightSum="7"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
-        app:tag_clickable="true"
-        app:tag_theme="none"
-        app:vertical_interval="10dp"
-        android:layout_marginLeft="0dp"
-        android:layout_marginTop="65dp" />
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout">
+
+        <Button
+            android:id="@+id/addtagbutton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_weight="0.5"
+            android:text="add tag"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
+
+        <co.lujun.androidtagview.TagContainerLayout
+            android:id="@+id/tagcontainerLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_weight="9"
+            android:elevation="4dp"
+            android:padding="10dp"
+            app:container_enable_drag="true"
+            app:horizontal_interval="10dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/addtagbutton"
+            app:tag_clickable="true"
+            app:tag_theme="none"
+            app:vertical_interval="10dp" />
+
+    </LinearLayout>
 
 
     <LinearLayout
