--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,7 @@
     <color name="grey_100">#F5F5F5</color>
     <color name="grey_300">#E0E0E0</color>
     <color name="blackOlive">#005c99</color>
+    <color name="material_red_500">#f44336</color>
 
     <!-- FOR alternative colors scheme
         <color name="colorPrimary">#039BE5</color>
